--- a/test-project/src/index.scss
+++ b/test-project/src/index.scss
@@ -135,34 +135,137 @@ body {
     width: 100%;
     height: 320px;
   }
+  width: 250px;
+  height: 80%;
+  margin-top: 2%;
 }
 
 .footer{
     width: 100%;
-    height: 200px;
-    background: rgb(211, 211, 211);
+    height: 100px;
+    background: black;
+    color: white;
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-    div{
-        width: 20%;
-        height: 100%;
-        background: rgb(184, 184, 184);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        font-size: 18px;
+.footerLinks{
+  width: 70%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 
-        ul{
-            list-style-type: none;
-            margin-left: -10%;
-        }
+  a{
+    text-decoration: none;
+    color: white;
+
+    &:hover{
+      color: lightblue;
+      text-shadow: white 0 0 10px; 
     }
   }
+
+  img{
+    width: 3%;
+    height: 70%;
+    margin-left: 4%;
+  }
+}
+
+.footerInfo{
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  font-size: 13px;
+
+  img{
+    width: 4%;
+    height: 100%;
+  }
+}
   
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
   }
+
+.copyraight{
+  font-size: 13px;
+}
+
+#accordion{
+  width: 100%;
+  margin-top: 2%;
+}
+
+.card-body-admin{
+  padding: 0;
+}
+
+.warningCards{
+  width: 100%;
+  height: 25em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-image: url("https://mdbootstrap.com/img/Photos/Horizontal/Nature/full page/img(20).jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#warningEnter{
+  color: white;
+  background: darkred;
+  border-radius: 5px;
+}
+
+.errorCard{
+  max-width: 18rem;
+  &:hover{
+    box-shadow: red 0 0 20px; 
+  }
+}
+
+.warningCard{
+  max-width: 18rem;
+  &:hover{
+    box-shadow: yellow 0 0 20px; 
+  }
+}
+
+.cart{
+  width: 19%;
+}
+
+.prettyButton{
+  border: none;
+  &:hover{
+    box-shadow: white 0 0 20px; 
+  }
+}
+
+.prettyButtonPrimary{
+  border: none;
+  &:hover{
+    box-shadow: lightcoral 0 0 20px; 
+  }
+}
+
+.selectMain{
+  width: 15%;
+  margin-left: 50%;
+}
+
+.filterValueMain{
+  width: 15%;
+  margin-left: 1%;
+}
+
+.table{
+  width: 100%;
+}
   
