--- a/test-project/src/index.css
+++ b/test-project/src/index.css
@@ -4,6 +4,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("/images/testback4.jpg");
 }
 
 .App {
@@ -20,7 +21,7 @@ body {
 }
 
 .navbar {
-  color: white;
+  background: black;
   width: 100%;
   position: fixed;
   z-index: 1;
@@ -29,7 +30,7 @@ body {
 
 .header-ayff {
   font-size: 20px;
-  color: black;
+  color: white;
   margin-top: 5%;
 }
 
@@ -38,6 +39,7 @@ body {
 }
 
 .phones {
+  background-image: url("/images/testback2.jpg");
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,12 +50,11 @@ body {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 90%;
+  width: 100%;
   height: 100%;
 }
 
 .carousel {
-  margin-top: 2%;
   -ms-grid-column-align: normal;
       justify-self: normal;
   -ms-flex-item-align: baseline;
@@ -68,13 +69,15 @@ body {
 
 .header-companys {
   font-size: 20px;
-  color: black;
+  color: white;
   margin-top: 2%;
 }
 
 .companys {
   width: 100%;
   height: 100px;
+  background: black;
+  opacity: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -119,7 +122,7 @@ body {
 
 .header-filters {
   font-size: 20px;
-  color: black;
+  color: white;
   margin-top: 2%;
 }
 
@@ -152,7 +155,7 @@ body {
 .phone {
   width: 250px;
   height: 80%;
-  margin-top: 2%;
+  margin: 2%;
 }
 
 .phone img {
@@ -291,6 +294,16 @@ code {
 }
 
 .prettyButton:hover {
+  -webkit-box-shadow: #ffbb3d 0 0 20px;
+          box-shadow: #ffbb3d 0 0 20px;
+  color: white;
+}
+
+.prettyButton1 {
+  border: none;
+}
+
+.prettyButton1:hover {
   -webkit-box-shadow: white 0 0 20px;
           box-shadow: white 0 0 20px;
 }
@@ -304,9 +317,24 @@ code {
           box-shadow: lightcoral 0 0 20px;
 }
 
+.prettyButtonSuccess {
+  border: none;
+}
+
+.prettyButtonSuccess:hover {
+  -webkit-box-shadow: #0faf00 0 0 20px;
+          box-shadow: #0faf00 0 0 20px;
+}
+
 .selectMain {
   width: 15%;
   margin-left: 50%;
+}
+
+.selectMain:hover {
+  -webkit-box-shadow: #9df4ff 0 0 10px;
+          box-shadow: #9df4ff 0 0 10px;
+  background: #d3f4ff;
 }
 
 .filterValueMain {
@@ -314,7 +342,127 @@ code {
   margin-left: 1%;
 }
 
+.filterValueMain:hover {
+  -webkit-box-shadow: #9df4ff 0 0 10px;
+          box-shadow: #9df4ff 0 0 10px;
+  background: #d3f4ff;
+}
+
 .table {
   width: 100%;
+  margin: 0px;
+}
+
+.table td {
+  border: none;
+}
+
+.table th {
+  border: none;
+}
+
+.table tbody {
+  background-image: url("/images/testback4.jpg");
+  color: white;
+}
+
+.feedbacks {
+  background: #2b2b2b;
+  width: 100%;
+  height: 280px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #ffbb3d;
+}
+
+.feedbacks label {
+  font-size: 20px;
+}
+
+.feedbacks button {
+  border: none;
+  border-radius: 3%;
+  height: 15%;
+  width: 10%;
+  font-size: 18px;
+  background: #ffbb3d;
+  outline: none;
+}
+
+.feedbacks button:hover {
+  -webkit-box-shadow: #ffbb3d 0 0 20px;
+          box-shadow: #ffbb3d 0 0 20px;
+}
+
+.feedbacks button:focus {
+  background: #ffb01c;
+}
+
+.feedbacks textarea {
+  resize: none;
+}
+
+.feedbackModal {
+  margin-top: 1%;
+}
+
+.feedbackModal span {
+  font-size: 14px;
+  color: #c92424;
+  font-weight: bold;
+}
+
+.feedbackModal div {
+  max-width: 100%;
+}
+
+.feedbackModalLike {
+  margin-top: 1%;
+}
+
+.feedbackModalLike span {
+  font-size: 14px;
+  color: #00cc00;
+  font-weight: bold;
+}
+
+.feedbackModalLike div {
+  max-width: 100%;
+}
+
+.forgotPass {
+  border: none;
+  font-size: 14px;
+  outline: none !important;
+}
+
+.forgotPass:hover {
+  -webkit-box-shadow: silver 0 0 20px;
+          box-shadow: silver 0 0 20px;
+}
+
+.feedbackDelete {
+  width: 30%;
+}
+
+.orderModal .orderOrder {
+  color: #2c2c2c;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.orderModal div {
+  color: #046383;
 }
 /*# sourceMappingURL=index.css.map */
